# music-transformer-app-backend

./: .dockerignore  Dockerfile  pyproject.toml
examples/: _230_bpm_multitrack.py  __init__.py  bach_format0.py  beat.py  pitch_bend_test.py  tchaikovsky_seasons.py
examples/bach/: __init__.py  bach_846.py  bach_847.py  bach_850.py
examples/beethoven/: __init__.py  symphony_7_2.py  symphony_7_2_singletrack.py
examples/debussy/: __init__.py  childrens_corner_1.py  childrens_corner_2.py  childrens_corner_3.py  childrens_corner_4.py  childrens_corner_5.py  claire_de_lune.py  menuet.py  passepied.py  prelude.py
examples/joplin/: __init__.py  the_entertainer.py
src/: commons.py  generate_from_unconditional_model.py  main.py
