[project]
name = ""
version = ""
description = ""
authors = [
    {name = "ot07", email = "ot07neoki@gmail.com"},
]
dependencies = [
    "fastapi==0.76.0",
    "gym==0.17.3",
    "magenta==2.1.3",
    "numpy==1.19.0",
    "tensor2tensor==1.14.1",
    "tensorflow==1.15.2",
    "tensorflow-datasets==3.2.1",
    "tensorflow-probability==0.7.0",
    "uvicorn==0.17.6",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]

[tool.pdm.scripts]
start = "uvicorn src.main:app --reload"

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "flake8>=4.0.1",
    "isort>=5.10.1",
]
[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
